--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -416,4 +416,10 @@ print(km_panel)
 
 ![](study-design-5.png)
 :::
-### End of the episode on Study design
+### This concludes the Study Design series. If you’d like to keep reading over your next cup of coffee, the following episodes are waiting:
+
+- [Reading a Paper over a Cup of Coffee]
+- [P-Value Explanations That Seem Plausible at First Glance]
+- [Beyond 0.05: Interpreting P-Values in a Clinical Trial]
+- [Understanding Confidence Intervals via Hypothetical Replications in R]
+- [Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size]
