--- a/jp/frequentist-2.qmd
+++ b/jp/frequentist-2.qmd
@@ -333,7 +333,11 @@ summary(fit)
 
 ::: voice-daughter
 私「ふーん。そんなことわざわざやるかなあ。統計学は“有意差がないこと”と“同等”の区別にうるさいってことね」
-::: 
+:::
+
+::: voice-father
+お父さん「日本では、歴史的に薬事承認の根拠として非劣性試験を行っていた時期があってね。この経験を踏まえると研究仮説と統計的な判断基準の関係は、厳密に考えないとまずいと思うんだ」
+:::
 ::::::::::::::::::::::::::::::::::::
 
 ::: {.callout-note appearance="simple"  title="ホパテの悲劇"}
