--- a/jp/logistic-regression-1.qmd
+++ b/jp/logistic-regression-1.qmd
@@ -227,7 +227,7 @@ glm(y ~ x1 + x2, family = binomial(), data = dat)
 :::
 
 ::: voice-father
-お父さん「そこはね、単変量分布を一般化線型モデルに広げないと説明できないよ。つまりね、`glm()`はgeneralized linear modelの略なんだけど、ただの確率分布ってわけじゃなくて、3つのパーツから成り立っているんだ。ざっくりいうとこの3つだよ」
+お父さん「そこはね、単変量分布を**一般化線型モデル**に広げないと説明できないよ。つまりね、`glm()`はgeneralized linear modelの略なんだけど、ただの確率分布ってわけじゃなくて、3つのパーツから成り立っているんだ。ざっくりいうとこの3つだよ」
 ::: 
 
 - 確率分布（データの型はなにか）
@@ -259,7 +259,7 @@ X <- model.matrix(~ x1 + x2, data = dat)
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「ちょっとマニアックだけど、Rの内部では、`model.matrix()`っていう関数で、デザイン行列Xを作っている。Xの最初の列はすべて1になる。これは回帰直線でいう切片に対応している。次の列以降はx1とx2に対応する値が計算される。こうしておくと、たとえばx1が文字列だったときに計算できたり、回帰係数との掛け算が、行列計算になって都合がいい。ここまで覚えなくていいけど、仕組みを知っておくと理解が進むでしょ」
+お父さん「ちょっとマニアックだけど、Rの内部では、`model.matrix()`っていう関数で、デザイン行列Xを作っている。Xの最初の列はすべて1になる。これは回帰直線でいう切片に対応している。次の列以降はx1とx2に対応する値が計算される。こうしておくと、たとえばx1が文字列でも数値に置き換えて計算できたり、回帰係数との掛け算が行列として計算できたり、なにかと都合がいい。ここまで覚えなくていいけど、仕組みを知っておくと理解が進むでしょ」
 ::: 
 
 ::: voice-daughter
@@ -267,7 +267,7 @@ X <- model.matrix(~ x1 + x2, data = dat)
 ::: 
 
 ::: voice-father
-お父さん「そう。`family`は日本語では分布族の意味だね。前にいったみたいに、データの型にあわせて確率分布を選ぶ」
+お父さん「そう。`family`は日本語では分布族の意味だね。正確には**指数型分布族（exponential family）**。前にいったみたいに、データの型にあわせて確率分布を選ぶ」
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
@@ -283,23 +283,23 @@ glm(y ~ x1 + x2, family = poisson(), data = dat)
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「そう。`family`は日本語では分布族の意味だね。前にいったみたいに、データの型にあわせて確率分布を選ぶ。ただし、一般化線型モデルではデフォルト仕様みたいなものがあって、`family`を指定すると以下の3つが一度に決まるっていう特徴がある」
+お父さん「ただしね、一般化線型モデルではデフォルト仕様みたいなものがあって、`family`を指定すると以下の3つが一度に決まるっていう特徴がある」
 ::: 
 
-- yの分布
+- yの確率分布
 - yの分散
-- その分布に“自然な”リンク関数
+- その確率分布にあったリンク関数
 
 ::: voice-daughter
 私「リンク関数ってなんだ？」
 ::: 
 
 ::: voice-father
-お父さん「リンク関数は**平均をどう変換して回帰係数×共変量にあわせるか**だよ。`family = binomial()`は、デフォルトでロジット関数というリンク関数を使っている。これがロジスティック回帰だよ」
+お父さん「リンク関数（link function）は、**平均をどう変換して回帰係数×共変量にあわせるか**だよ。`family = binomial()`は、デフォルトでロジット関数というリンク関数を使っている。ロジット関数が、2項分布の構造にあった"自然な"リンク関数なんだ。これがロジスティック回帰だよ」
 ::: 
 
 ::: voice-daughter
-私「そっか、よかった。うん、だいたいわかったから今日はもういい」
+私「そっか、よかった。うん、けっこうわかったから今日はもういい」
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
