--- a/jp/logistic-regression-5.qmd
+++ b/jp/logistic-regression-5.qmd
@@ -142,142 +142,182 @@ a:hover {
 # Story and Quiz − Adjusting for bias V
 
 ::: serif-block
-　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, generalized linear model, estimation
+　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, generalized linear model, confounding/information-bias/selection-bias
 :::
 
 ------------------------------------------------------------------------
 
-### ロジスティック回帰の計算ができない理由
+### ロジスティック回帰で「調整する」ってどういうこと？
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「ロジスティック回帰についてなんだけど。ロジット関数のグラフでイメージはわいたんだけどさ。がんサバイバー調査だと、ロジスティック回帰は2群を比較するとき使うんだよね」
+私「お父さん、ロジスティック回帰でわからないことがあるんだけど。以前、観察研究では交絡因子を調整しないといけない、とかいってたよね」
 ::: 
 
 ::: voice-father
-お父さん「そうだったね。じゃあ、続けてロジスティック回帰の下で、2人の対象者を比べるとどうなるかって話をするね」
+お父さん「ああ、そんな話もあったね」
 ::: 
-:::::::::::::::::::::::::::::::::
 
+::: voice-daughter
+私「でもさ、調整しないオッズ比も計算できるでしょ。どっちが正しいのかってどうやればわかるの？統計学の本を読んでも、書いてなくて」
+::: 
 
-::: {.callout-note appearance="simple" title="回帰係数とオッズ比の関係"}
+::: voice-father
+お父さん「それは統計学だけではわからない問題なんだ。データがどんな確率分布に従っているか、誰も知らないからね。因果推論や医学知識を使って判断すべき問題になる」
+::: 
 
-共変量が1個のとき、ロジスティック回帰は
+::: voice-daughter
+私「なにそれ？統計学の話じゃないの？ロジスティック回帰について聞いてるんだけど」
+::: 
 
-$\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i}$
-
-と表すことができます。そして、対象者$i=1$では$X_{1}=0$、対象者$i=2$では$X_{2}=1$という値をとる状況を考えてみましょう。それぞれの対象者の共変量の値を、上の式に代入すると、以下のようになります。
-
-$\log(\frac{\pi_1}{1-\pi_1})=\beta_0$
-
-$\log(\frac{\pi_2}{1-\pi_2})=\beta_0+\beta_1$
-
-ここで、$\pi_1$は対象者1の確率パラメータ、$\pi_2$は対象者2の確率パラメータです。これらの確率パラメータから、オッズ比を求めるとどうなるでしょうか。それは、以下の式で計算されます。
-
-$(\frac{\pi_2}{1-\pi_2})\div(\frac{\pi_1}{1-\pi_1})=\exp(\beta_0+\beta_1)\div \exp(\beta_0)=\exp(\beta_1)$
-
-この結果は、回帰係数$\beta_1$の指数をとるとオッズ比が得られることを意味しています。
-
+::: voice-father
+お父さん「そう思うよねえ。じゃあちょっと時間をかけて説明させてよ。」
 :::
 
-::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「なるほど、回帰係数からオッズ比を計算できるってこういうことなのね」**
+私「いいけど」
 ::: 
 
 ::: voice-father
-お父さん「このオッズ比の計算ができるのは、ロジット関数の特徴によるものでしょ。だから、ロジスティック回帰はオッズ比のモデルともいえるんだ」
+お父さん「疫学の分野での話なんだけどね。40年前に、コーヒーが膵がんを増やすんじゃないか、っていう論文がでたことがある」
 ::: 
 
 ::: voice-daughter
-私「前の話だと、Cox回帰はハザード比のモデルなんだっけ？」
+私「いかにもありそうな話だね」
 ::: 
 
 ::: voice-father
-お父さん「そういうこと。リスク比にはリスク比のモデルがあるし、リスク差にはリスク差のモデルがある。リンク関数はそれぞれ別の関数になる」
+お父さん「そうでしょ。でも、疫学研究では、コーヒーを飲んでいる人のような曝露集団と、うまく比較できるようなコントロールを選ぶことは、ほとんどの場合難しい。だから、疫学の教科書では、コントロールと比較するときには、第3の因子が隠れていないかどうかに注意しなければいけないと書いてある」
 ::: 
 
 ::: voice-daughter
-私「じゃあ最後にさ、完全分離について説明してくれない？この前の解析で、なにが起きたのか知りたいんだよね」
+私「ふんふん」
+::: 
+
+::: voice-father
+お父さん「それでは問題です。コーヒーと膵がんの論文で、実際に問題になった第3の因子はなんでしょう？」
+::: 
+
+::: voice-daughter
+私「え？えーっと」
+::: 
+
+![図2.png](logistic-regression-1.png)
+
+::: voice-father
+お父さん「答えはこちら」
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note appearance="simple" title="ロジスティック回帰の推定"}
+::: {.callout-note appearance="simple" collapse="true" title="お父さんの答えは？"}
+それは喫煙です。当時は今より喫煙率が高くて、ほとんどの方がコーヒーと一緒にたばこを吸っていたそうです。
 
-**推定に用いられる関数**
-
-先ほど述べたアウトカム$Y_1,Y_2,...,Y_N$の同時確率の式に、データ$y_1,y_2,...,y_N$を代入すると、$\pi_i$の式が得られます。ただし、$\pi_i$は$\beta_0,\beta_1,...,\beta_{p-1}$の関数です。したがって、同時確率の式は、$L(\beta_0,\beta_1,...,\beta_{p-1})$というように、$\beta_0,\beta_1,...,\beta_{p-1}$の関数とみなすことができます。この関数を尤度関数といいます。
-
-ロジスティック回帰の回帰係数は、この尤度関数を最大化する値として計算されます。ただし、データから必ずしも解が求まるわけではありません。計算が収束しなかったり、不安定になったりする理由は、主に二通り考えられます。
-
-**完全分離**
-
-一つ目は、完全分離（complete separation）や擬似完全分離（quasi-complete separation）です。完全分離とは、
-
-$\log(\frac{\hat\pi_i}{1-\hat\pi_i})=\hat\beta_0+\hat\beta_1X_{i,1}+...+\hat\beta_{p-1}X_{i,p-1}$
-
-を計算したとき、その値によって、$Y_1,Y_2,...,Y_N$を100%の精度で0または1に判別できてしまう状況のことをいいます。擬似完全分離は、100%ではないものの、完全分離と同様に共変量からアウトカムが判別できてしまう状況です。別の言葉でいえば、共変量の情報に比べて、データに含まれる情報が不足していて、実質的にランダム性がないということを意味します。つまり、完全分離や擬似完全分離は、サンプルサイズに比べ、共変量の数が多すぎるときに生じます。
-
-**多重共線性**
-
-二つ目は、多重共線性（multi-colinearity）です。これは、共変量同士の相関が強すぎることを意味します。仮に、年収が年齢に完全に比例する状況（つまり相関が1）を考えてみてください。このとき、ロジスティック回帰を用いて年収と年齢の影響を分離することはできません。これが多重共線性の一例です。言い換えると、相関の高い共変量は、推定が不安定になるため同時にロジスティック回帰に含めるべきではありません。
+![図1.png](logistic-regression-3.png)
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「あれ？回帰分析って最小2乗法を使うんじゃないの？尤度関数？」
+私「へえ、そんな話があったんだ」
 ::: 
 
 ::: voice-father
-お父さん「大学の教科書ではそう教わるけどね。最小2乗法を使うのは連続データのときだけかな。別の推定方法もいろいろある」
+お父さん「じゃあさ、こういう第3の因子を無視して解析してしまうとどうなる？」
 ::: 
 
 ::: voice-daughter
-私「ふーん。新しい方法がいろいろありそうってのは知ってるよ。AIとか機械学習とか」
+私「それくらいわかるよ。バイアスが生じるんでしょ」
 ::: 
 
 ::: voice-father
-お父さん「まあね。はやりだよね」
-::: 
-
-::: voice-daughter
-私「統計学と機械学習ってどう違うの？同じ？」
-::: 
-
-::: voice-father
-お父さん「お隣さんって感じかな。データを解析するって意味では同じことをしているわけだし、機械学習の教科書でも、ロジスティック回帰とかロジスティック判別とかは扱うもの。統計学で習うROC曲線なんかは、機械学習の範疇な気がするし。重なる部分は多いよ。まあ、機械学習の方がたくさんのパラメータを推定する傾向にあるとはいえるかな。ロジスティック回帰よりニューラルネットワークの方が、モデルも複雑だし、パラメータの数も多い。さっき共変量の数を減らそうっていったでしょ。機械学習では、ああいうパラメータの数を減らすって発想はしない」
-::: 
-
-::: voice-daughter
-私「パラメータの数が少ないのが統計学の特徴ってわけ？」
-::: 
-
-::: voice-father
-お父さん「うーん、でもそれは程度問題かもしれない。一番の違いはなんだろうね。統計学は、統計的推測が基礎にあるってことかな。統計的推測っていうのは、標本から母集団を調べるっていう考え方のこと。手法でいうと、p値とか信頼区間とか、ああいうやつね。パラメータの数が多すぎると、これらの手法は性能が下がるんだ」
-::: 
-
-::: voice-daughter
-私「機械学習に統計的推測って考え方はないの？」
-::: 
-
-::: voice-father
-お父さん「機械学習やってる人も統計学は学んでいるから、ないとはいわないけど、あんまりこだわってないんじゃない？画像認識するとき、p値なんていらないでしょ」
-::: 
-
-::: voice-daughter
-私「そういうもんかな。まあいいや、疲れてきたし。性別のオッズ比が無限大になった理由はわかったよ。尤度関数にデータを代入したら、回帰係数の解が変になるような式になったってわけね」
-::: 
-
-::: voice-father
-お父さん「ん？思ったより芯を食った説明ができてるじゃない。さすがだね」
-::: 
-
+お父さん「そういうこと。こういう因子は、疫学では交絡因子（confounder）と呼ばれているんだけど、ロジスティック回帰で調整しないといけない。調整したときとしないときで、まったく違った結果が得られるっていう数値例を示そう」
+:::
 :::::::::::::::::::::::::::::::::
 
 
-### 文献
+::: {.callout-note appearance="simple" title="Simpsonのパラドックス"}
 
-- [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
+コーヒーと膵がんの数値例を用いて、統計学でいう調整とはどういう操作のことなのかみてみましょう。ここでは層別解析を用いて説明しますが、ロジスティック回帰でオッズ比を求めたときも、同じ計算結果になります（交互作用をうまく入れる必要がありますが）。
+
+表1は、コーヒーと膵がんを想定した仮想データです。コーヒー摂取群とコーヒー非摂取群で、それぞれ膵がん発生ありとなしが調べられています。膵がんを発生したのはそれぞれの群で15人と12人、膵がんがなかったのは365人と868人です。オッズ比を計算してみましょう。コーヒー摂取群では膵がんリスクは3.9%で、コーヒーを摂取しない群の1.4%に比べて、オッズ比は3倍です。これは、コーヒーを摂取すると、膵がんリスクが高くなることを意味しています。
+
+表2には、交絡因子（喫煙）によって対象者を層別した結果が示されています。ここから膵がんのオッズ比を求めるとどうなるでしょうか。コーヒー摂取でも非摂取でもリスクは同じですよね。つまりオッズ比は1倍です。
+
+このように、調整前後で、関連の程度が変わる現象を、Simpsonのパラドックスといいます（Simpson 1951）。
+
+表1. 層別前の膵がんリスクとオッズ比
+
+|              | コーヒー摂取 | コーヒー非摂取 | オッズ比 |
+|--------------|--------------|----------------|----------|
+| 合計         |              |                |          |
+| 　膵がんあり | 15           | 12             |          |
+| 　膵がんなし | 365          | 868            |          |
+| 　リスク     | 3.9%         | 1.4%           | 3倍      |
+
+表2. 層別後の膵がんリスクとオッズ比
+
+|              | コーヒー摂取 | コーヒー非摂取 | オッズ比 |
+|--------------|--------------|----------------|----------|
+| 喫煙         |              |                |          |
+| 　膵がんあり | 14           | 4              |          |
+| 　膵がんなし | 266          | 76             |          |
+| 　リスク     | 5.0%         | 5.0%           | 1倍      |
+| 非喫煙       |              |                |          |
+| 　膵がんあり | 1            | 8              |          |
+| 　膵がんなし | 99           | 792            |          |
+| 　リスク     | 1.0%         | 1.0%           | 1倍      |
+
+:::
+
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「へー。単純な解析ではリスク因子なのに、層別解析では関連が消えた。こんなことあるんだ」
+::: 
+
+::: voice-father
+お父さん「そう、交絡因子を無視して、間違った研究結果を報告してしまうとまずいでしょ。もうひとつ注目してほしいのが、喫煙とコーヒーの関連。喫煙状況ごとにコーヒー摂取割合を計算してみてよ」
+::: 
+
+::: voice-daughter
+私「コーヒー摂取割合ね。層別前は30%。喫煙集団では78%、非喫煙集団では11%だよ」**
+::: 
+
+::: voice-father
+お父さん「うん、喫煙群と非喫煙群でコーヒー摂取割合に大きな差があるでしょ。この現象が起きた理由は、コーヒー摂取と喫煙に強い関連があったため、ということ。もし仮に、 コーヒー摂取・非摂取という介入をランダムに割付けるランダム化介入試験を行ったらどうなると思う？」
+::: 
+
+::: voice-daughter
+私「両群で喫煙割合は、ほぼ同じになるはず」
+::: 
+
+::: voice-father
+お父さん「うん。そうすると、ランダム化介入試験で得られるオッズ比は、喫煙・非喫煙別の結果を平均することになるから、全体でも1倍に近い結果になると予想される。つまり、層別する前のオッズ比3倍という結果は、コーヒーではなく喫煙が真の原因となって生じた見かけの関連なので、層別した後のオッズ比が正しい。だから、ロジスティック回帰で調整オッズ比を求めるべきなんだ」
+::: 
+::::::::::::::::::::::::::::::::: 
+
+::: {.callout-note title="このエピソードに関係するクイズです"}
+
+ロジスティック回帰のリンク関数は、ロジット関数以外のものを代わりに使うことができます（これを一般化線型モデルといいます）。リンク関数をうまく指定することによって、オッズ比以外の関連の指標を求められることが知られています。
+
+次の指標のうち、対応するリンク関数がなく、求められないものはどれでしょうか。
+
+1.  リスク差
+2.  リスク比
+3.  ハザード比
+4.  1、2、3すべて求めることができる
+:::
+
+::: {.callout-note collapse="true" title="答えはこちら"}
+-   **正解は4です**
+
+一般化線型モデルはロジスティック回帰を一般化したもので、「リンク関数」を変えることで、さまざまな指標を計算できます（田中2022）。
+
+リスク差を求めるには、g(π)=π つまり恒等関数を指定します。
+
+リスク比を求めるには、g(π)=log⁡(π) つまり対数関数を指定します。
+
+ハザード比を求めるには、g(π)=log{-log⁡(1-π)} つまり補2重対数（complementary log log）関数を指定します。
+:::
 
 ### Continuation of their story
 
