--- a/jp/study-design-1.qmd
+++ b/jp/study-design-1.qmd
@@ -220,7 +220,7 @@ Keywords: observational study, outcome, study design
 :::
 
 ::: voice-father
-お父さん「デザイン段階で、どのような対象に調査すべきか考えておくことは大切だよ。一般論だけど、対象集団を狭く限定した方が、質問項目を詳細にできるから。それに比較可能性（comparability）も高まる。ストーマ保有者と非保有者を比べるなら、がん種は統一したいよね」
+お父さん「デザイン段階で、どのような対象に調査すべきか考えておくことは大切だよ。一般論だけど、対象集団を狭く限定した方が、質問項目を詳細にできるから。それに**比較可能性（comparability）**も高まる。ストーマ保有者と非保有者を比べるなら、がん種は統一したいよね」
 :::
 
 ::: voice-daughter
@@ -228,7 +228,7 @@ Keywords: observational study, outcome, study design
 :::
 
 ::: voice-father
-お父さん「一方で、対象集団は広い方が、一般化可能性（generalizability）が高い。がんサバイバーの復職率を推定したいんだったら、がん種を限定する必要はないし、できれば複数の施設で調査したいよね」
+お父さん「比較可能性を高めるための統計手法やRパッケージもある。回帰調整のための`glm()`やプロペンシティスコア調整のための`CBPS()`とかね。一方で、対象集団は広い方が、**一般化可能性（generalizability）**が高い。がんサバイバーの復職率を推定したいんだったら、がん種を限定する必要はないし、できれば複数の施設で調査したいよね」
 :::
 
 ::: voice-daughter
@@ -340,6 +340,16 @@ Keywords: observational study, outcome, study design
 
 PECOになりにくい研究仮説もあります。たとえば、疾患発生と関連のあるリスク因子を探す、いわゆる探索的研究では、EとCははっきり決まっていません。構造化といっても、臨床疑問をかならずPECOの形式にしなければならないわけではありません。研究デザインに最低限必要な要素を特定することが大切です。
 :::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「なるほどね、オリジナル仮説を立てろっていわれたら困るけど、研究の要素を洗い出して、ひとつひとつ決めていく作業はきらいじゃないわ。いつかは必要なことだし」
+:::
+
+::: voice-father
+お父さん「そうでしょ。それに研究者の思考を、早い段階で専門的な表現に置き換えておくと、コミュニケーションもうまくなる。疾患やアウトカムの定義、治療や曝露内容は、医師や施設によって微妙な違いがあるものだからね。言葉をおろそかにすると混乱の種になる」
+:::
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
 
