--- a/en/Study-design-3.qmd
+++ b/en/Study-design-3.qmd
@@ -157,7 +157,7 @@ Keywords: clinical trial, outcome, simulation, survival/competing-risk
 
 ------------------------------------------------------------------------
 
-### What exactly is an “outcome”?
+### What exactly is an outcome?
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
@@ -169,11 +169,11 @@ Dad: “That depends. Is there coffee involved?”
 :::
 
 ::: voice-daughter
-Me: “Already poured. So... about outcomes. In journal club, all these abbreviations show up: **OS**, **DFS**, **RFS**, **PFS**... Everyone talks like they’re obvious, but I’m honestly fuzzy on the details. I know they’re supposed to be outcomes, but what’s really different between things like **DFS** and **RFS**? You deal with these all the time, right?” 
+Me: “Already poured. So... about outcomes. In journal club, all these abbreviations show up: OS, DFS, RFS, PFS... Everyone talks like they’re obvious, but I’m honestly fuzzy on the details. I know they’re supposed to be outcomes, but what’s really different between things like DFS and RFS? You deal with these all the time, right?” 
 :::
 
 ::: voice-father
-Dad: “I do. The one you probably see most is **OS**: overall survival. Then there’s **disease-free survival (DFS)** and **relapse-free survival (RFS)**.”
+Dad: “I do. The one you probably see most is **overall survival (OS)**. Then there’s **disease-free survival (DFS)** and **relapse-free survival (RFS)**.”
 ::: 
 
 ::: voice-daughter
@@ -181,7 +181,7 @@ Me: “RFS sounds like ‘number of days until relapse’ in my head.”
 :::
 
 ::: voice-father
-Dad: “If we literally meant ‘number of days until relapse’, we’d probably call it **relapse-free time**. You’ll also see terms like **cumulative incidence of relapse (CIR)**.”
+Dad: “If we literally meant ‘number of days until relapse’, we may call it relapse-free time. You’ll also see terms like **cumulative incidence of relapse (CIR)**.”
 :::
 
 ::: voice-daughter
@@ -189,7 +189,7 @@ Me: “Acronyms are multiplying, not shrinking. Help.”
 :::
 
 ::: voice-father
-Dad: “Let’s slow it down. In survival analysis, we’re always looking at **time from some origin to an event**. The twist is what we call an **event**. For **DFS**, we often count as events:
+Dad: “Let’s slow it down. In survival analysis, we’re always looking at **time from some origin to an event**. The twist is what we call an **event**. For DFS, we often count as events:
 :::
 
 - recurrence
@@ -206,7 +206,7 @@ Me: “So if someone gets a second cancer, that’s already an event in DFS, eve
 :::
 
 ::: voice-father
-Dad: “Exactly. For **RFS**, it’s usually:
+Dad: “Exactly. For RFS, it’s usually:
 :::
 
 - recurrence
@@ -244,14 +244,14 @@ Me: “So not all deaths are equal in terms of ‘cancer story’.”
 Dad: “Exactly. Let me show you a simplified table of common **survival endpoints in cancer trials**. Think of it as a map, not a legal document.”
 :::
 
-| Endpoint                           | What counts as an event?                          |
-|-----------------------------------|-------------------------------------------------------------------|
-| Overall survival (**OS**)         | Death from any cause                                             |
-| Progression-free survival (**PFS**)| Progression/relapse **or** death                                 |
-| Relapse-free survival (**RFS**)   | Relapse **or** death                                             |
-| Relapse-free time (**RFT**)      | Relapse only                                                     |
-| Disease-free survival (**DFS**)   | Relapse, second cancer, **or** death                             |
-| Event-free survival (**EFS**)     | Death, induction failure, relapse, second cancer (depends on trial) |
+| Endpoint                              | What counts as an event?                                            |
+|---------------------------------------|---------------------------------------------------------------------|
+| Overall survival (OS)                 | Death from any cause                                                |
+| Progression-free survival (PFS)       | Progression or death                                                |
+| Relapse-free survival (RFS)           | Relapse or death                                                    |
+| Cumulative incidence of relapse (CIR) | Relapse only, with death as a competing risk                        |
+| Disease-free survival (DFS)           | Relapse, second cancer, or death                                    |
+| Event-free survival (EFS)             | Death, induction failure, relapse, second cancer (depends on trial) |
 
 ::: voice-father
 Dad: “The key idea is:”
@@ -274,7 +274,7 @@ Dad: “Good question. Common choices for the **time origin** are:”
 - date of **diagnosis**
 
 ::: voice-father
-Dad: “For **postoperative adjuvant therapy**, using the **date of surgery** is natural. If you used date of discharge instead, deaths before discharge would be invisible in your analysis, which can be a big problem.”
+Dad: “For a study on postoperative adjuvant therapy, using the date of surgery is natural. If you used date of discharge instead, deaths before discharge would be invisible in your analysis, which can be a big problem.”
 :::
 
 ::: voice-daughter
@@ -284,7 +284,6 @@ Me: “So if I’m evaluating adjuvant chemo after surgery, time zero = surgery 
 ::: voice-father
 Dad: “Exactly. Time origin is like the zero point on your ruler: if you set it wrong, all the distances become hard to interpret.”
 :::
-
 
 ### Survival analysis and competing risks analysis
 
@@ -303,7 +302,7 @@ Dad: “Let’s use R again. We’ll simulate two groups with and without stoma.
 
 - OS curves  
 - RFS curves  
-- CIR curves with death as the competing risk
+- CIR curves with death as competing risks
 
 ::: {.callout-note appearance="simple" title="Generating simulated data with relapse"}
 
@@ -313,7 +312,7 @@ The following code defines an R function, `generate_data()`, that produces a bin
 
 - Survival time: from an exponential distribution using `rexp()` (calculated from random numbers for t_relapse, t_death, t_censoring)
 
-In a previous episode, we summarized survival data without competing risks, and we used the Kaplan-Meier curve for that, right? In contrast, for analyzing data with competing risks, it is formally correct to use the Aalen-Johansen curve instead of the Kaplan-Meier curve.
+In a previous episode, we summarized survival data without competing risks, and we used the **Kaplan-Meier curve** for that, right? In contrast, when there are **competing risks**, it is more appropriate to use the **Aalen–Johansen estimator of the cumulative incidence function**, rather than a Kaplan–Meier curve for relapse.
 :::
 
 ::: {.callout-note appearance="simple"  collapse="true" title="Code of generate_data() used for data generation"}
@@ -362,6 +361,7 @@ generate_data <- function(n=200, hr1, hr2) {
     time_cir   = time_cir,
     status_cir = status_cir
   )
+  return(dat)
 }
 ```
 :::
@@ -382,7 +382,10 @@ cifplot(Event(time_os, status_os) ~ stoma,
   label.y      = "Overall survival"
 )
 ```
+
+In this simulated data, patients with a stoma have clearly worse OS: their Kaplan–Meier curve drops faster and stays below the curve for patients without a stoma. 
 :::
+
 
 ::: {.callout-note appearance="simple"  title="Kaplan–Meier curves for RFS"}
 
@@ -393,6 +396,7 @@ cifplot(Event(time_rfs, status_rfs) ~ stoma,
   label.y      = "Relapse-free survival"
 )
 ```
+For RFS, the Kaplan–Meier curves drop faster and the gap is even larger, because both relapse and death are counted as events. 
 :::
 
 ::: {.callout-note appearance="simple"  title="Aalen-Johansen curves for CIR"}
@@ -403,7 +407,7 @@ The following code inputs the risk of recurrence by coding `Event(time_cir, stat
 - `status_cir=2` : Competing risk (death not experiencing recurrence)
 - `status_cir=0` : Censoring
 
-Furthermore, by specifying `outcome.type = “competing-risk”`, it plots the **Aalen-Johansen curve**.
+Furthermore, by specifying `outcome.type = "competing-risk"`, it plots the **Aalen-Johansen curve**.
 
 ```{r}
 cifplot(Event(time_cir, status_cir) ~ stoma,
@@ -428,7 +432,7 @@ Me: “The curve for relapse looks a bit like a survival curve turned upside dow
 :::
 
 ::: voice-father
-Dad: “Visually, yes. But conceptually it’s different. If you used Kaplan–Meier for relapse, you’d treat deaths as censored — as if they just disappeared from the risk set. But death isn’t the same as ‘lost to follow-up’. It’s a real, meaningful event. So for competing risks, we prefer to estimate **cumulative incidence functions** with the Aalen–Johansen method, which respects the fact that death is another type of event. In other words, choosing ‘who is an event’ and ‘who is a competing risk’ changes how we interpret the outcome.”
+Dad: “Visually, yes. But conceptually it’s different. By the way, I mentioned wanting to use ‘cumulative incidence of relapse‘ instead of ‘relapse-free time‘ because a **cumulative incidence curve** or **cumulative incidence function** is the same as the **Aalen-Johansen curve** in the context of survival analysis. If you used Kaplan–Meier for relapse, you’d treat deaths as censored — as if they just disappeared from the risk set. But death isn’t the same as ‘lost to follow-up’. It’s a real, meaningful event. So for competing risks, we prefer to estimate the Aalen-Johansen curve, which respects the fact that death is another type of event. In other words, choosing ‘who is an event’ and ‘who is a competing risk’ changes how we interpret the outcome.”
 :::
 
 ::: voice-daughter
@@ -451,7 +455,7 @@ Me: “The obvious advantage is that you can finish the trial earlier, right? Yo
 :::
 
 ::: voice-father
-Dad: “Exactly. Shorter trials, faster answers. But there’s a risk: sometimes surrogates don’t predict OS well. There are famous examples. In advanced colorectal cancer, combination therapy with 5-FU and leucovorin demonstrated tumor shrinkage in clinical trials. However, when evaluating OS, it became clear that this combination had little effect on prolonging life (Fleming and Demets 1996). Surrogates can be very useful, but they’re not automatically ‘good enough’ on their own.”
+Dad: “Exactly. Shorter trials, faster answers. But there’s a risk: sometimes surrogates don’t predict OS well. There are famous examples. In advanced colorectal cancer, combination therapy with 5-FU and leucovorin demonstrated tumor shrinkage in clinical trials. However, when evaluating OS, it became clear that this combination had little effect on prolonging life (Fleming and DeMets 1996). Surrogates can be very useful, but they’re not automatically ‘good enough’ on their own.”
 :::
 
 ::: voice-daughter
@@ -466,7 +470,7 @@ Dad: “That’s a healthy attitude.”
 
 ::: {.callout-note appearance="simple" title="A quiz related to this episode"}
 
-This one is about how we define progression and events in trials using **progression-free survival (PFS)**. To measure PFS, we need to determine tumor progression based on imaging. Sometimes a central review committee evaluates images to make this more objective. In that case, there may be discrepancies between:
+This quiz focuses on how we define progression and events when using **progression-free survival (PFS)** as an endpoint in clinical trials. To measure PFS, we need to determine tumor progression based on imaging. Sometimes a central review committee evaluates images to make this more objective. In that case, there may be discrepancies between:
 
 - the progression date according to the **central review**, and  
 - the progression date according to the **local investigator**.
@@ -487,10 +491,16 @@ If you define the event as “whichever progression date comes first (central or
 This doesn’t mean you must always use central review; in some contexts, local assessment may better reflect real clinical decision-making. But “always take the earlier date” is not an appropriate general rule.
 :::
 
-
 ### Reference
 
 - Biomarkers Definitions Working Group. Biomarkers and surrogate endpoints: preferred definitions and conceptual framework. Clin Pharmacol Ther 2001;69(3):89-95
 
 - Fleming TR and DeMets DL. Surrogate end points in clinical trials: are we being misled? Ann Intern Med 1996;125(7):605-13
 
+### Episodes
+
+- [A Story of Coffee Chat and Research Hypothesis](study-design-1.qmd)
+- [Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes](study-design-2.qmd)
+- [A First Step into Survival and Competing Risks Analysis with R]
+- [Outcomes: The Bridge from Data Collection to Analysis]
+- [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys]
