--- a/jp/frequentist-5.qmd
+++ b/jp/frequentist-5.qmd
@@ -374,7 +374,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::
 
 ::: voice-father
-お父さん「この表のサンプルサイズは、術後1年間100%追跡できるという前提で計算している。サンプルサイズの計算では、本来、それぞれの群のハザード比や生存期間中央値から必要なイベント数を求め、それを観察するために必要な期間を考慮したうえで人数を決めるんだけど、今回は、2パターンの検出力だけみればいいように状況を単純化している。さっき検出力について説明したでしょ。表2は、検出力90%の検定を行うために必要なサンプルサイズで、表1はそれを検出力80%に緩めたときのもの。表1をみると、検出力80%でよければ、152人に調査すればいいみたいだね」
+お父さん「この表のサンプルサイズは、術後1年間100%追跡できるという前提で計算している。サンプルサイズの計算では、本来、それぞれの群のハザード比や生存期間中央値から必要なイベント数を求め、それを観察するために必要な期間を考慮したうえで人数を決める。結構ややこしいでしょ。今回は、2パターンの検出力だけみればいいように状況を単純化している。さっき検出力について説明したじゃない、対立仮説の下で有意になる確率ね。表2は、検出力90%の検定を行うために必要なサンプルサイズで、表1はそれを検出力80%に緩めたときのもの。表1をみると、検出力80%でよければ、152人に調査すればいいみたいだね」
 :::
 
 ::: voice-daughter
@@ -452,7 +452,7 @@ ssizeCT.default(
 
 
 ::: voice-daughter
-私「えー、サンプルサイズが思ったより増えちゃった。調査する施設を増やすかどうか考えないと」
+私「えー、Kってストーマありの割合だよね、そんなのまだわからないもの。思ったより人数が必要かもってことだよね。調査する施設を増やすかどうか考えないと」
 :::
 
 ::: voice-father
@@ -460,7 +460,7 @@ ssizeCT.default(
 :::
 
 ::: voice-daughter
-私「でも、サンプルサイズの意味がわかったから、しょうがないやるかって思ったよ。シミュレーション1000回のうち失敗しちゃった調査が、私の調査だったらきっついもん。ひとつの調査を繰り返したときのことをイメージできると、統計的に価値の高い研究とはなにかが見えてくるね」
+私「でも、サンプルサイズの意味がわかったから、しょうがないやるかって思ったよ。シミュレーション1000回のうち失敗しちゃった調査が、私の調査だったらきっついもん。ひとつの調査を繰り返したときのことをイメージできると、統計的な意味のある研究ってなにかが見えてくるね」
 :::
 :::::::::::::::::::::::::::::::::
 
