--- a/jp/logistic-regression-3.qmd
+++ b/jp/logistic-regression-3.qmd
@@ -142,182 +142,298 @@ a:hover {
 # Story and Quiz − Adjusting for bias III
 
 ::: serif-block
-　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, generalized linear model, confounding/information-bias/selection-bias
+　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, generalized linear model, confounding/information-bias/selection-bias, paper writing
 :::
 
 ------------------------------------------------------------------------
 
-### ロジスティック回帰で「調整する」ってどういうこと？
+### どうしてオッズ比が無限大になっちゃったの？
 
 ::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「お父さん、ロジスティック回帰でわからないことがあるんだけど。以前、観察研究では交絡因子を調整しないといけない、とかいってたよね」
-::: 
-
 ::: voice-father
-お父さん「ああ、そんな話もあったね」
-::: 
-
-::: voice-daughter
-私「でもさ、調整しないオッズ比も計算できるでしょ。どっちが正しいのかってどうやればわかるの？統計学の本を読んでも、書いてなくて」
-::: 
-
-::: voice-father
-お父さん「それは統計学だけではわからない問題なんだ。データがどんな確率分布に従っているか、誰も知らないからね。因果推論や医学知識を使って判断すべき問題になる」
-::: 
-
-::: voice-daughter
-私「なにそれ？統計学の話じゃないの？ロジスティック回帰について聞いてるんだけど」
-::: 
-
-::: voice-father
-お父さん「そう思うよねえ。じゃあちょっと時間をかけて説明させてよ。」
+お父さん「あのさ、昨日のロジスティック回帰の表の続きをしない？コーヒー淹れたから」
 :::
 
 ::: voice-daughter
-私「いいけど」
-::: 
-
-::: voice-father
-お父さん「疫学の分野での話なんだけどね。40年前に、コーヒーが膵がんを増やすんじゃないか、っていう論文がでたことがある」
-::: 
-
-::: voice-daughter
-私「いかにもありそうな話だね」
-::: 
-
-::: voice-father
-お父さん「そうでしょ。でも、疫学研究では、コーヒーを飲んでいる人のような曝露集団と、うまく比較できるようなコントロールを選ぶことは、ほとんどの場合難しい。だから、疫学の教科書では、コントロールと比較するときには、第3の因子が隠れていないかどうかに注意しなければいけないと書いてある」
-::: 
-
-::: voice-daughter
-私「ふんふん」
-::: 
-
-::: voice-father
-お父さん「それでは問題です。コーヒーと膵がんの論文で、実際に問題になった第3の因子はなんでしょう？」
-::: 
-
-::: voice-daughter
-私「え？えーっと」
-::: 
-
-![図2.png](logistic-regression-1.png)
-
-::: voice-father
-お父さん「答えはこちら」
-::: 
-::::::::::::::::::::::::::::::::: 
-
-::: {.callout-note appearance="simple" collapse="true" title="お父さんの答えは？"}
-それは喫煙です。当時は今より喫煙率が高くて、ほとんどの方がコーヒーと一緒にたばこを吸っていたそうです。
-
-![図1.png](logistic-regression-3.png)
+私「ん、いいよ。この表だよね」
 :::
+:::::::::::::::::::::::::::::::::
+
+| パラメータ | 自由度 | 推定値 | 標準誤差 | 95%信頼区間   | χ2    | p値    |
+|------------|--------|--------|----------|---------------|-------|--------|
+| Intercept  | 1      | -27.25 | 3.03     | -33.20～21.30 | 80.55 | \<0.01 |
+| STOMA      | 1      | 1.41   | 1.54     | -16.1～4.45   | 0.84  | 0.3588 |
+| AGE        | 1      | 1.47   | 1.48     | -1.42～4.36   | 0.99  | 0.3197 |
+| SEX        | 1      | 25.72  | 0.00     | 25.72～25.72  |       |        |
+| INCOME     | 1      | -0.00  | 0.00     | -0.00～0.00   | 0.58  | 0.4481 |
 
 ::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「この表は間違いじゃないんだけどもっとよくできる。表を作成するときには、情報が自然に入ってくるように、読者の立場で考えなくちゃ。具体的な注意点はこんなところかな」
+:::
+:::::::::::::::::::::::::::::::::
+
+-   読者の立場で考える
+-   表のフォーマットに従う
+-   単位・表示桁数に気を配る
+-   表タイトル・脚注を利用して補足情報を伝える
+-   数え尽くしの原則を守る
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「ロジスティック回帰からいろんな指標が出せるけど、表にはオッズ比、95%信頼区間、p値だけあれば普通はじゅうぶんだよ」
+:::
+
 ::: voice-daughter
-私「へえ、そんな話があったんだ」
-::: 
+私「それはこの表にも載ってるよね」
+:::
 
 ::: voice-father
-お父さん「じゃあさ、こういう第3の因子を無視して解析してしまうとどうなる？」
-::: 
+お父さん「載っていません。この表の”推定値”は、みたところ回帰係数の値でしょ。それをオッズ比（odds ratio）に換算しないといけない。換算するには、回帰係数βの指数をとって、OR=exp(β)を求めればいい」
+:::
 
 ::: voice-daughter
-私「それくらいわかるよ。バイアスが生じるんでしょ」
-::: 
+私「そうなのか。ストーマのオッズ比はexp(1.41)=4.1倍ってことね。あれ？exp(25.72)を計算してみると、パソコンに表示できないくらいに大きい数字になったんだけど。ほとんど無限大に近い数字だ。性別の影響が強いのかな。年収はexp(-0.00)？なんか変だな」
+:::
 
 ::: voice-father
-お父さん「そういうこと。こういう因子は、疫学では交絡因子（confounder）と呼ばれているんだけど、ロジスティック回帰で調整しないといけない。調整したときとしないときで、まったく違った結果が得られるっていう数値例を示そう」
+お父さん「これはよくあるトラブルだよ」
+:::
+
+::: voice-daughter
+私「そうなの？」
+:::
+
+::: voice-father
+お父さん「復職しなかった患者さんはほとんど女性だったんじゃない？擬似完全分離（quasi-complete separation）っていう計算上の問題が起きちゃってて、性別の回帰係数を、うまく推定できていないんだ」
 :::
 :::::::::::::::::::::::::::::::::
 
 
-::: {.callout-note appearance="simple" title="Simpsonのパラドックス"}
+::: {.callout-note appearance="simple" title="完全分離"}
 
-コーヒーと膵がんの数値例を用いて、統計学でいう調整とはどういう操作のことなのかみてみましょう。ここでは層別解析を用いて説明しますが、ロジスティック回帰でオッズ比を求めたときも、同じ計算結果になります（交互作用をうまく入れる必要がありますが）。
-
-表1は、コーヒーと膵がんを想定した仮想データです。コーヒー摂取群とコーヒー非摂取群で、それぞれ膵がん発生ありとなしが調べられています。膵がんを発生したのはそれぞれの群で15人と12人、膵がんがなかったのは365人と868人です。オッズ比を計算してみましょう。コーヒー摂取群では膵がんリスクは3.9%で、コーヒーを摂取しない群の1.4%に比べて、オッズ比は3倍です。これは、コーヒーを摂取すると、膵がんリスクが高くなることを意味しています。
-
-表2には、交絡因子（喫煙）によって対象者を層別した結果が示されています。ここから膵がんのオッズ比を求めるとどうなるでしょうか。コーヒー摂取でも非摂取でもリスクは同じですよね。つまりオッズ比は1倍です。
-
-このように、調整前後で、関連の程度が変わる現象を、Simpsonのパラドックスといいます（Simpson 1951）。
-
-表1. 層別前の膵がんリスクとオッズ比
-
-|              | コーヒー摂取 | コーヒー非摂取 | オッズ比 |
-|--------------|--------------|----------------|----------|
-| 合計         |              |                |          |
-| 　膵がんあり | 15           | 12             |          |
-| 　膵がんなし | 365          | 868            |          |
-| 　リスク     | 3.9%         | 1.4%           | 3倍      |
-
-表2. 層別後の膵がんリスクとオッズ比
-
-|              | コーヒー摂取 | コーヒー非摂取 | オッズ比 |
-|--------------|--------------|----------------|----------|
-| 喫煙         |              |                |          |
-| 　膵がんあり | 14           | 4              |          |
-| 　膵がんなし | 266          | 76             |          |
-| 　リスク     | 5.0%         | 5.0%           | 1倍      |
-| 非喫煙       |              |                |          |
-| 　膵がんあり | 1            | 8              |          |
-| 　膵がんなし | 99           | 792            |          |
-| 　リスク     | 1.0%         | 1.0%           | 1倍      |
-
+ロジスティック回帰の回帰係数は、最尤法という汎用的な推定方法によって計算されます。ただし、データから必ずしも最尤法の解が求まるわけではありません。これが完全分離（complete separation）や擬似完全分離（quasi-complete separation）という問題です。完全分離や擬似完全分離は、サンプルサイズに比べ、共変量の数が多すぎるときに生じます。これらの問題が起きると、回帰係数が求まらなかったり、不安定だったりするわけですから、共変量の数の削減や、最尤法以外の推定方法の利用など、なんらかの対処が必要になります。
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「というわけで、正しい計算ができていないわけだから、ロジスティック回帰の結果を示すのはやめた方がいい。性別だけじゃなくて年収も問題だね。単位が円のまま扱うと、桁が大きすぎて数字が読めない。単位を万円にして、年収が1万円増えたら復職率がどう変化するかを示すといいんじゃないかな。性別と年収の扱いは気になると思うけど、今はこれくらいにしよう。表の体裁を直してあげるよ」
+:::
+
+::::::::::::::::::::::::::::::::: 
+
+|              | オッズ比 | 95%信頼区間 | p値  |
+|--------------|----------|-------------|------|
+| ストーマなし | （基準） |             |      |
+| ストーマあり | 4.13     | 0.20～85.23 | 0.36 |
+| 65歳未満     | （基準） |             |      |
+| 65歳以上     | 4.35     | 0.24～78.60 | 0.32 |
+| 女性         | （基準） |             |      |
+| 男性         | ∞        | ∞～∞        |      |
+| 年収（万円） | 1.00     | 0.98～1.01  | 0.45 |
+
+\*手術後1年以内の復職をアウトカムとした多変量ロジスティック回帰
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「へー。単純な解析ではリスク因子なのに、層別解析では関連が消えた。こんなことあるんだ」
-::: 
+私「あれ？オッズ比4.13倍ってことは、復職率がだいたい4倍になったってこと？そんなことある？」
+:::
 
 ::: voice-father
-お父さん「そう、交絡因子を無視して、間違った研究結果を報告してしまうとまずいでしょ。もうひとつ注目してほしいのが、喫煙とコーヒーの関連。喫煙状況ごとにコーヒー摂取割合を計算してみてよ」
+お父さん「違う違う。あのね、オッズ比はオッズの比をとったもの。オッズっていうのは、復職率を$\pi$で表すと、それを$\pi/(1-\pi)$と変換したものなんだ。$\pi$が0に近いときは、オッズ比は$\pi$の比に近い値になるんだけど、復職率の場合はそうじゃないよね。今回は、復職できない確率が約4倍になったって意味だよ」
+:::
+
+::: voice-daughter
+私「わかりにくいのう」
+:::
+
+::: voice-father
+お父さん「じゃあ、どこに気を付けて手直ししたか説明するね。ロジスティック回帰では、共変量はなにで、どう扱ったかを正確に伝えることが大切なんだ。データをみると、年齢は65歳未満か以上かで分類した2値データみたいだね。そういうときは、何歳で分類したか、どの分類を基準にしたかわからないと、結果を読み取れない。また、連続データでは、忘れがちだけど単位が必要。年収の単位を円から万円にして、表に追記しておいたよ」
+:::
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note appearance="simple" title="注意事項1. フォーマット"}
+
+論文で示される表には、決められたフォーマットがあります。表は、行（row）と列（column）から構成され、行と列は概念的には対称ですが、視覚的には役割が異なります。英語圏では、表は左から右に、行ごとに読むことが慣習になっています。そのため、このサイトに示されている表のように、縦線で区切ることはしません。
+
+数字の意味をわかりやすく伝えるためには、どこにどのような情報を配置するかに気を配るべきです。さきほどの表では、列が指標の種類を表すというシンプルな方針を採用しています。そのため、数字がオッズ比、95%信頼区間、p値に対応することが一目でわかります。また、必要な情報から順に読み取れるように、各行または各列の順序にも気を配りたいところです。
+
+ある程度大きな表であれば、情報はグループにわけられることが普通です。表のフォーマットも、グループが視覚的にわかりやすいように工夫できます。たとえば後に出てくる表1では、行と列でそれぞれグループ化がなされています。行をグループ化するときには字下げ（indent）を用います。性別の内訳を示すために字下げがなされていますよね。また、列をグループ化するときにはスパナ（spanner）を用います。“ストーマ保有者”、“ストーマ非保有者”といった列の見出しを、スパナヘッド（spanner head）といいます。
+
+:::
+
+::: {.callout-note appearance="simple" title="注意事項2. 単位・表示桁数"}
+
+表では測定単位（unit）を明らかにすることが重要です。臨床検査値を扱う論文を投稿するときは、その雑誌の編集方針をみて、どのような単位系を採用しているか確認しましょう。
+
+数字の表示桁数は、ある程度桁数やルールが統一されていなければ、印象を悪くします。統計ソフトウェアが出力する数字は桁数が大きいことがありますが、そのまま表に示す必要はありません。有効数字2桁または3桁か、もともとの測定値より桁数を1桁大きく示すのが基本です。
+
+日本工業規格（Z 9041-1:1999）によると、平均の有効数字は、測定値より1～2桁大きく、標準偏差の有効数字は、最大でも3桁程度といわれています。つまり、むやみに数字の表示桁数を増やしても精確性が増すわけではないのです。年齢を例に挙げると、測定単位は「歳」なので、小数点1桁まで示すとよいでしょう。表1の年齢の平均・標準偏差では、そのようになっています。p値については、小数点以下2桁か3桁まで報告すれば、有意水準（0.05が多い）との大小関係が読み取ることができるので、必要十分でしょう。
+
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「表の作り方をご助言いただけるのはありがたいんだけどさ、肝心のロジスティック回帰はどうすればいいんだろ」
+:::
+
+::: voice-father
+お父さん「擬似完全分離を避けるには、共変量の数を削らすのがわかりやすい。今回はサンプルサイズが不足しているみたいだから、他の共変量はすべて使わないで、単にストーマ造設と復職率だけの関連を調べたらどうかな？その場合も、通常の$\chi^2$検定は使わない方がいいよ。Fisherの正確検定とClopper-Pearson信頼区間っていう方法が推奨されている」
+:::
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note appearance="simple"  title="2値データの解析においてサンプルサイズが不足したときの指針"}
+
+-   ロジスティック回帰の共変量の数を減らす（目安としてパラメータの数のおよそ5倍のイベント数が必要）
+-   $\chi^2$検定ではなくFisher正確検定を用いる
+-   2項分布に基づく信頼区間（Clopper-Pearson信頼区間）を用いる（田中2022）
+
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「でも、ロジスティック回帰で交絡因子を調整しなさいっていったのはお父さんなんだよ」
+:::
+
+::: voice-father
+お父さん「そうだね、それは重要な問題だよね。じゃあ、ストーマ保有者と非保有者で、年齢、性別、年収の分布がどれくらい違うかをまず確認しようか。前にも話したとおり、年収を尋ねたことでバイアスが生じていないかとか、年収を尋ねて欠測が多いんじゃないかとか、いろいろ気になるし。もし分布が揃ってたら、調整しなくても影響は小さいかもしれない」
+:::
+
+::: voice-daughter
+私「あ、その表なら資料にあるよ」
+:::
+
+::: voice-father
+お父さん「じゃあ、あとはストーマ造設と復職率の関連を表にするだけだね。資料には、以下の表1と表2を載せればいいよ」
+:::
+
+:::::::::::::::::::::::::::::::::
+
+表1. 20XX～20YY年にZZ病院で手術を受け、がんサバイバー復職率調査に回答した直腸がん患者80人の背景因子の記述
+
+|              | ストーマ保有者（N=20） | ストーマ非保有者（N=60） |
+|--------------|------------------------|--------------------------|
+| 年齢（歳）   | 57.0 (8.6)             | 65.5 (10.4)              |
+| 65歳以上     | 10.0%                  | 51.7%                    |
+| 性別         |                        |                          |
+| 　男性       | 35.0%                  | 53.3%                    |
+| 　女性       | 60.0%                  | 46.7%                    |
+| 　不明       | 5.0%                   | 0.0%                     |
+| 年収（万円） | 508 (77)               | 514 (101)                |
+
+\*平均（SD）または%
+
+表2. 直腸がん患者のうちストーマ保有者20人と非保有者60人の復職率の比較
+
+|              | N   | 1年以内に復職せず | 復職率 | 95%信頼区間\* | p値† |
+|--------------|-----|-------------------|--------|---------------|------|
+| ストーマあり | 20  | 1                 | 95.0%  | 75.1～99.9%   |      |
+| ストーマなし | 60  | 2                 | 96.7%  | 88.5～99.6%   | 1.00 |
+
+\*Clopper-Pearson法
+
+†Fisher正確検定
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「集団のアウトカムを比較したいときは、その前に表1のようにそれぞれの集団の背景因子を記述するべきだよ。ストーマ保有者は20人しかいなくて、非保有者に比べて、平均年齢が低くて、女性が多いわけだ。やっぱり最終的にはロジスティック回帰で、背景因子の違いを調整しないといけないかもね。現時点での調査の回答率はどうだった？」
+:::
+
+::: voice-daughter
+私「調査票は100人に送って、80人から回収できたから、回答率は80%かな」
+:::
+
+::: voice-father
+お父さん「項目ごとの無回答（item non-response）についてはどう？」
+:::
+
+::: voice-daughter
+私「そっか、調査票を回収できたかと、項目ごとの回答があったかは別だもんね。年齢は全員回答してくれたよ。性別は1人記入していなかった。項目ごとの回答数まで、表に示した方がよかった？」
+:::
+
+::: voice-father
+お父さん「ううん、論文ではそこまで細かい数字は示さないことが多い。重要な変数が欠測してたりするなら別だけどね。たとえばさ、ロジスティック回帰を行うとき、性別不明はどう扱ったの？」
+:::
+
+::: voice-daughter
+私「統計ソフトウェアのマニュアル調べたら、欠測は自動的に除外されるんだって」
+:::
+
+::: voice-father
+お父さん「そうすると解析対象の人数が80人じゃなくて79人に減るんだから、表を作るときにそこを説明しておかないといけないんじゃない？一般に、ロジスティック回帰の結果を示す表だけだと、どんなデータかわかりにくいっていう問題がある。復職できなかったのは3人しかいないって、表2をみるまで気づかなかったよ？まだ1施設からのデータしか集まってないからでしょ。それじゃあロジスティック回帰はしたくてもできないよね」
+:::
+
+::: voice-daughter
+私「確かにね。そのあたりの状況を、読者に伝えなきゃって気持ちが足りなかったみたい」
+:::
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note appearance="simple"  title="注意事項3. 表タイトル・脚注"}
+
+読者が表を読むときのことを想像してみてください。最初に目にするのは、表に示された結果自体ではなく、表タイトルの情報です。簡潔な表タイトルをよく目にしますが、これはもったいないことです。表1、表2の表タイトルには、調査が行われた状況、対象疾患、人数、統計解析の目的などが含まれています。表タイトルを決めるときは、可能な限り多くの情報を伝えるように工夫しましょう。
+
+表には様々な数字が示されますから、どういった指標かわかりにくいときがしばしばあります。もしかしたら、複雑な統計手法から計算されたものかもしれません。データを解析するために用いた統計手法は、方法のセクションで説明することが基本ですが、読者への配慮として、表の脚注（footnote）を利用することもあります。表1でいえば、括弧内の数字の意味は自明ではないので、“平均（SD）または%”と脚注がついていますよね。表2の脚注には、どの統計手法を用いて信頼区間とp値を計算したかが説明されています。このように読者にとってなじみのない指標や表現には、補足説明が必要です。
+
+脚注を参照するための記号には、a、b、cまたは\*、†、‡、§、¶を用いるのが正式です。
+
+:::
+
+::: {.callout-note appearance="simple"  title="注意事項4. 数え尽くしの原則"}
+
+統計解析の経験があるものなら誰でも、様々な理由で対象者が除外されるため、個々の解析で、人数が必ずしも同じにならないことを知っているものです。透明性を高めるために、統計解析ごとに、何人が対象となったか報告するべきです。
+
+統計家の間では、数え尽くしの原則（principle of exhaustion）という言葉があります。分類変数の分類が複雑だったり、欠測データがあったりするときには、分類ひとつひとつの人数を合計し、それが全体の人数に合うかどうかを確認せよ、というのがこの原則の教えです。最初に作成した表では人数が示されておらず、どのようなデータが解析されたのかわかりません。一方、表1・表2では、何人が解析対象で、何人が復職したのかが記述されています。さらに、数え尽くすと全体80人や100%に一致することから、正しく集計されたことが読み取れます。
+
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「ちなみにお父さん、もし”臨床疑問と研究仮説”で例を挙げてくれたときの研究仮説3みたいに、研究の目的が復職率と関連する因子の探索だとしたら、何か変わることはある？」
+:::
+
+::: voice-father
+お父さん「どんな特徴を持った患者が、復職が難しいのか、予測因子をみつけたいってことかな。予測因子の候補となるデータがあるなら、それをロジスティック回帰の共変量に入れることで、予測因子の探索を行うことができるよね」
 ::: 
 
 ::: voice-daughter
-私「コーヒー摂取割合ね。層別前は30%。喫煙集団では78%、非喫煙集団では11%だよ」**
-::: 
+私「うんうん」
+:::
 
 ::: voice-father
-お父さん「うん、喫煙群と非喫煙群でコーヒー摂取割合に大きな差があるでしょ。この現象が起きた理由は、コーヒー摂取と喫煙に強い関連があったため、ということ。もし仮に、 コーヒー摂取・非摂取という介入をランダムに割付けるランダム化介入試験を行ったらどうなると思う？」
+お父さん「予測因子の探索では、特定の因子に関心がないってことが第一の違いだよ。ストーマと復職率の関連を調べるときは、ストーマのオッズ比やp値を求めることがゴールでしょ。予測因子の探索では、予測因子の候補をできるだけたくさん集めて、どの因子をモデルに入れたら予測精度が高いか、逆にどの因子は要らないかを調べることがゴールになる。これを変数選択っていうんだ」
 ::: 
 
 ::: voice-daughter
-私「両群で喫煙割合は、ほぼ同じになるはず」
-::: 
+私「ゴールは違ってもさ、p値を使えばよくない？有意な因子をモデルに入れたらいいんでしょ」
+:::
 
 ::: voice-father
-お父さん「うん。そうすると、ランダム化介入試験で得られるオッズ比は、喫煙・非喫煙別の結果を平均することになるから、全体でも1倍に近い結果になると予想される。つまり、層別する前のオッズ比3倍という結果は、コーヒーではなく喫煙が真の原因となって生じた見かけの関連なので、層別した後のオッズ比が正しい。だから、ロジスティック回帰で調整オッズ比を求めるべきなんだ」
-::: 
-::::::::::::::::::::::::::::::::: 
+お父さん「そういうやり方もあるけどね。予測2乗誤差、ROC曲線、AICといった予測精度の指標はいっぱいあって、それを利用することも多い。もうひとつ注意した方がいいのは、予測因子の候補や、どのような基準で変数選択するかを、事前に決めておくこと。事前に決めておかないと、どうしても研究者の主観が入っているんじゃないかって批判されるからね」
+:::
+:::::::::::::::::::::::::::::::::
 
-::: {.callout-note title="このエピソードに関係するクイズです"}
+::: {.callout-note title="このエピソードに関係するクイズです"} 
 
-ロジスティック回帰のリンク関数は、ロジット関数以外のものを代わりに使うことができます（これを一般化線型モデルといいます）。リンク関数をうまく指定することによって、オッズ比以外の関連の指標を求められることが知られています。
+ロジスティック回帰の起源として正しいのは、次の時代のうちどれでしょうか。
 
-次の指標のうち、対応するリンク関数がなく、求められないものはどれでしょうか。
+1.  1900年以前
+2.  1900～30年
+3.  1931～60年
+4.  1961年以降
 
-1.  リスク差
-2.  リスク比
-3.  ハザード比
-4.  1、2、3すべて求めることができる
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は4です**
+-   **正解は1です**
 
-一般化線型モデルはロジスティック回帰を一般化したもので、「リンク関数」を変えることで、さまざまな指標を計算できます（田中2022）。
+少なくとも、ベルギーの数学者Queteletが1838年に出版した書籍に、ロジット関数の式が示されています。ロジスティックという単語は、同じくベルギーの数学者Verhulstが1845年にProceeding of Belgian Royal Academyで、初めて用いられたとされています。
 
-リスク差を求めるには、g(π)=π つまり恒等関数を指定します。
-
-リスク比を求めるには、g(π)=log⁡(π) つまり対数関数を指定します。
-
-ハザード比を求めるには、g(π)=log{-log⁡(1-π)} つまり補2重対数（complementary log log）関数を指定します。
 :::
+
+
+### 文献
+
+- [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
 
 ### Continuation of their story
 
