--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -263,7 +263,7 @@ Keywords: clinical trial, outcome, simulation, survival/competing-risk
 
 -   生存時間：指数分布（`rexp`）から生成した生存時間データ（t_relapse, t_death, t_censoringの乱数から計算）
 
-前回、競合リスクのない生存時間データを要約しましたが、そこで用いたのはKaplan-Meier曲線でしたよね。それに対して、競合リスクデータの解析では、Kaplan-Meier曲線ではなく、Aalen-Johansen曲線を用いるのが正式です。
+前回、競合リスクのない生存時間データを要約しましたが、そこで用いたのは**Kaplan-Meier曲線**でしたよね。それに対して、**競合リスク解析**では、Kaplan-Meier曲線ではなく、**Aalen-Johansen曲線**を用いるのが正式です。
 :::
 
 ::: {.callout-note appearance="simple"  collapse="true" title="generate_data()のコードはこちら（データ生成に使用）"}
@@ -312,6 +312,7 @@ generate_data <- function(n=200, hr1, hr2) {
     time_cir   = time_cir,
     status_cir = status_cir
   )
+  return(dat)
 }
 ```
 :::
@@ -374,7 +375,7 @@ cifplot(Event(time_cir, status_cir) ~ stoma,
 > 生存曲線（Kaplan–Meier曲線）と累積発生曲線（Aalen-Johansen曲線）はまったく異なる統計手法なので
 > 競合リスクがあるときはAalen-Johansen曲線を用いる。
 
-CIRの解析で、Kaplan–Meier曲線を計算することもできるよ。このとき、再発を経験しない死亡は、競合リスク（`status_cir=2`）ではなく打ち切り（`status_cir=0`）として入力することになる。でも本来なら、死亡は、追跡期間終了や追跡不能による打ち切りとは、違う転帰だよね。だから競合リスクとして扱うのが正しい。
+ちなみに、relapse-free timeじゃなくてcumulative incidence of relapseを使いたいっていったけど、それは"cumulative incidence curve"が、専門的にはAalen-Johansen曲線と同じ意味だからなんだよね。やろうと思えばCIRを解析するとき、Kaplan–Meier曲線を計算することもできるよ。このとき、再発を経験しない死亡は、競合リスク（`status_cir=2`）ではなく打ち切り（`status_cir=0`）として入力することになる。でも本来なら、死亡は、追跡期間終了や追跡不能による打ち切りとは、違う転帰だよね。だから競合リスクとして扱うのが正しい。
 :::
 
 ::: voice-daughter
@@ -390,7 +391,7 @@ CIRの解析で、Kaplan–Meier曲線を計算することもできるよ。こ
 ::: {.callout-note appearance="simple"  title="臨床エンドポイントと代替エンドポイント"}
 OS、DFS、RFSは、特に術後補助化学療法の有効性を評価するときに用いられるアウトカム（エンドポイントともいいます）です。それでは両者は、どのような考え方で使い分けられているのでしょうか。指針の1つになっているのが、医薬品の承認審査の考え方です。たとえば抗悪性腫瘍薬の臨床評価方法に関するガイドライン（厚生労働省2021）では、抗がん剤を承認するためには、生存期間の延長などにもとづき、確実な有効性を示す必要があると述べています。そのため、具体的な指標として、OSが臨床エンドポイント（clinical endpoint）とみなされ、こちらが重視されています（Biomarkers Definitions Working Group 2001）。
 
-その一方で、術後補助化学療法としての抗がん剤の有効性を評価する臨床試験では、代替エンドポイント（surrogate endpoint）として採用することがあります。代替エンドポイントとは、臨床エンドポイントの代わりになることが意図されたもので、臨床上の便益・害の有無を予測することが期待されるものと定義されます。DFSのような代替エンドポイントを用いる最大のメリットは、試験期間が短くなることです。ただし、過去の承認審査では、代替エンドポイントの利用が誤った医薬品評価につながったケースが数多く報告されています（Fleming and Demets 1996）。たとえば、進行大腸がんにおける5FU+ロイコボリン併用療法は、臨床試験で腫瘍縮小がみられたにもかかわらず、臨床エンドポイントであるOSを評価すると、ほとんど延命効果がないことが明らかになりました（Fleming and Demets 1996）。
+その一方で、術後補助化学療法としての抗がん剤の有効性を評価する臨床試験では、代替エンドポイント（surrogate endpoint）として採用することがあります。代替エンドポイントとは、臨床エンドポイントの代わりになることが意図されたもので、臨床上の便益・害の有無を予測することが期待されるものと定義されます。DFSのような代替エンドポイントを用いる最大のメリットは、試験期間が短くなることです。ただし、過去の承認審査では、代替エンドポイントの利用が誤った医薬品評価につながったケースが数多く報告されています（Fleming and DeMets 1996）。たとえば、進行大腸がんにおける5FU+ロイコボリン併用療法は、臨床試験で腫瘍縮小がみられたにもかかわらず、臨床エンドポイントであるOSを評価すると、ほとんど延命効果がないことが明らかになりました（Fleming and Demets 1996）。
 :::
 
 ::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
